[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qingping-ble-bridge"
version = "0.2.0"
description = "BLE bridge for Qingping alarm clocks — REST API for reading sensors and writing persistent configuration over Bluetooth"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Pawel Szczepaniak" }
]
keywords = ["qingping", "ble", "bluetooth", "alarm-clock", "cgc1", "cgd1", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Home Automation",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "bleak>=1.0,<2.0",
  "bleak-retry-connector>=4.4,<5.0",
  "pydantic>=2.9,<3.0",
]

[tool.setuptools.packages.find]
include = ["zion_ble_bridge*"]
